--- a/index.html
+++ b/index.html
@@ -1461,13 +1461,13 @@
             // --- CONFIGURATION ---
             const CONFIG = {
                 FIREBASE: {
-                    apiKey: "YOUR_API_KEY",
-                    authDomain: "YOUR_AUTH_DOMAIN",
-                    databaseURL: "YOUR_DATABASE_URL",
-                    projectId: "YOUR_PROJECT_ID",
-                    storageBucket: "YOUR_STORAGE_BUCKET",
-                    messagingSenderId: "YOUR_SENDER_ID",
-                    appId: "YOUR_APP_ID"
+                    apiKey: "AIzaSyCQ4vHqGiv_yRkA0zZaaOU24gxhqBkxnv4",
+                    authDomain: "journal-a003f.firebaseapp.com",
+                    databaseURL: "https://journal-a003f-default-rtdb.asia-southeast1.firebasedatabase.app",
+                    projectId: "journal-a003f",
+                    storageBucket: "journal-a003f.firebasestorage.app",
+                    messagingSenderId: "1038636626553",
+                    appId: "1:1038636626553:web:7a91c321e39c146bdc9aa8"
                 },
                 DB_PATHS: {
                     TRADES: 'trades',
