--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,32 @@
                                 </tbody>
                             </table>
                         </div>
+                        <div class="table-wrapper" style="margin-top: 20px;">
+                            <table class="setups-table">
+                                <thead>
+                                    <tr>
+                                        <th rowspan="2">TF</th>
+                                        <th colspan="3">0-Candle Bounce</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Entry</th>
+                                        <th>Target</th>
+                                        <th>Stoploss</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr><th>5min</th><td></td><td></td><td></td></tr>
+                                    <tr><th>15min</th><td></td><td></td><td></td></tr>
+                                    <tr><th>30min</th><td></td><td></td><td></td></tr>
+                                    <tr><th>1hour</th><td></td><td></td><td></td></tr>
+                                    <tr><th>2hour</th><td></td><td></td><td></td></tr>
+                                    <tr><th>4hour</th><td></td><td></td><td></td></tr>
+                                    <tr><th>daily</th><td></td><td></td><td></td></tr>
+                                    <tr><th>weekly</th><td></td><td></td><td></td></tr>
+                                    <tr><th>monthly</th><td></td><td></td><td></td></tr>
+                                </tbody>
+                            </table>
+                        </div>
                         <div class="setups-controls">
                             <button id="save-setups-1-btn" class="master-only">Save Primary Setups</button>
                             <p id="setups-save-status-1" class="setups-save-status"></p>
@@ -4052,3 +4078,4 @@
     </script>
 </body>
 </html>
+```
