--- a/index.html
+++ b/index.html
@@ -1111,52 +1111,30 @@
                                         <th rowspan="2">TF</th>
                                         <th colspan="3">0-Candle</th>
                                         <th colspan="3">4-Candle</th>
-                                    </tr>
-                                    <tr>
-                                        <th>Entry</th>
-                                        <th>Target</th>
-                                        <th>Stoploss</th>
-                                        <th>Entry</th>
-                                        <th>Target</th>
-                                        <th>Stoploss</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                    <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="table-wrapper" style="margin-top: 20px;">
-                            <table class="setups-table">
-                                <thead>
-                                    <tr>
-                                        <th rowspan="2">TF</th>
                                         <th colspan="3">0-Candle Bounce</th>
                                     </tr>
                                     <tr>
                                         <th>Entry</th>
                                         <th>Target</th>
                                         <th>Stoploss</th>
+                                        <th>Entry</th>
+                                        <th>Target</th>
+                                        <th>Stoploss</th>
+                                        <th>Entry</th>
+                                        <th>Target</th>
+                                        <th>Stoploss</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr><th>5min</th><td></td><td></td><td></td></tr>
-                                    <tr><th>15min</th><td></td><td></td><td></td></tr>
-                                    <tr><th>30min</th><td></td><td></td><td></td></tr>
-                                    <tr><th>1hour</th><td></td><td></td><td></td></tr>
-                                    <tr><th>2hour</th><td></td><td></td><td></td></tr>
-                                    <tr><th>4hour</th><td></td><td></td><td></td></tr>
-                                    <tr><th>daily</th><td></td><td></td><td></td></tr>
-                                    <tr><th>weekly</th><td></td><td></td><td></td></tr>
-                                    <tr><th>monthly</th><td></td><td></td><td></td></tr>
+                                    <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                    <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
                                 </tbody>
                             </table>
                         </div>
@@ -1357,8 +1335,12 @@
                                 <th rowspan="2">TF</th>
                                 <th colspan="3">0-Candle</th>
                                 <th colspan="3">4-Candle</th>
+                                <th colspan="3">0-Candle Bounce</th>
                             </tr>
                             <tr>
+                                <th>Entry</th>
+                                <th>Target</th>
+                                <th>Stoploss</th>
                                 <th>Entry</th>
                                 <th>Target</th>
                                 <th>Stoploss</th>
@@ -1368,15 +1350,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -2528,6 +2510,9 @@
                     cells[3].textContent = rowData.four_entry || '';
                     cells[4].textContent = rowData.four_target || '';
                     cells[5].textContent = rowData.four_stoploss || '';
+                    cells[6].textContent = rowData.bounce_entry || '';
+                    cells[7].textContent = rowData.bounce_target || '';
+                    cells[8].textContent = rowData.bounce_stoploss || '';
                 });
             }
             
@@ -2660,6 +2645,9 @@
                         four_entry: cells[3].textContent.trim(),
                         four_target: cells[4].textContent.trim(),
                         four_stoploss: cells[5].textContent.trim(),
+                        bounce_entry: cells[6].textContent.trim(),
+                        bounce_target: cells[7].textContent.trim(),
+                        bounce_stoploss: cells[8].textContent.trim()
                     };
                 });
                 
@@ -4078,4 +4066,3 @@
     </script>
 </body>
 </html>
-```
