--- a/index.html
+++ b/index.html
@@ -429,6 +429,9 @@
             text-align: center;
             margin-top: 15px;
         }
+        .setups-controls button {
+            margin: 0 10px;
+        }
         .setups-save-status {
             text-align:center;
             font-style:italic;
@@ -1096,16 +1099,17 @@
                 </div>
             </div>
 
-            <!-- Primary Setups Section -->
+            <!-- Trading Setups Section (Combined) -->
             <div class="collapsible-section">
                 <div class="collapsible-header">
-                    <h2>Primary Setups</h2>
+                    <h2>Trading Setups</h2>
                     <button class="collapsible-toggle-btn">+</button>
                 </div>
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
+                        <h3>Primary</h3>
                         <div class="table-wrapper">
-                            <table id="primary-setups-table-tracker" class="setups-table">
+                            <table id="primary-setups-table" class="setups-table">
                                 <thead>
                                     <tr>
                                         <th rowspan="2">TF</th>
@@ -1138,9 +1142,48 @@
                                 </tbody>
                             </table>
                         </div>
+
+                        <h3 style="margin-top: 25px;">Secondary</h3>
+                        <div class="table-wrapper">
+                            <table id="secondary-setups-table" class="setups-table">
+                               <thead>
+                                   <tr>
+                                       <th rowspan="2">TF</th>
+                                       <th colspan="3">0-Candle</th>
+                                       <th colspan="3">4-Candle</th>
+                                       <th colspan="3">0-Candle Bounce</th>
+                                   </tr>
+                                   <tr>
+                                       <th>Entry</th>
+                                       <th>Target</th>
+                                       <th>Stoploss</th>
+                                       <th>Entry</th>
+                                       <th>Target</th>
+                                       <th>Stoploss</th>
+                                       <th>Entry</th>
+                                       <th>Target</th>
+                                       <th>Stoploss</th>
+                                   </tr>
+                               </thead>
+                               <tbody>
+                                   <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                   <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                               </tbody>
+                           </table>
+                       </div>
+
                         <div class="setups-controls">
                             <button id="save-setups-1-btn" class="master-only">Save Primary Setups</button>
+                            <button id="save-setups-2-btn" class="master-only">Save Secondary Setups</button>
                             <p id="setups-save-status-1" class="setups-save-status"></p>
+                            <p id="setups-save-status-2" class="setups-save-status"></p>
                         </div>
                     </div>
                 </div>
@@ -1321,51 +1364,6 @@
         
             <div style="margin-bottom: 25px;">
                 <textarea id="persistent-notes-entry" placeholder="Persistent scratchpad..."></textarea>
-            </div>
-
-            <div class="setups-container">
-                <div class="setups-header" data-target="#setups-table-wrapper-2-journal">
-                    <h2>Secondary Setups</h2>
-                    <button class="setups-toggle-btn">−</button>
-                </div>
-                <div class="table-wrapper" id="setups-table-wrapper-2-journal">
-                     <table id="secondary-setups-table-journal" class="setups-table">
-                        <thead>
-                            <tr>
-                                <th rowspan="2">TF</th>
-                                <th colspan="3">0-Candle</th>
-                                <th colspan="3">4-Candle</th>
-                                <th colspan="3">0-Candle Bounce</th>
-                            </tr>
-                            <tr>
-                                <th>Entry</th>
-                                <th>Target</th>
-                                <th>Stoploss</th>
-                                <th>Entry</th>
-                                <th>Target</th>
-                                <th>Stoploss</th>
-                                <th>Entry</th>
-                                <th>Target</th>
-                                <th>Stoploss</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                        </tbody>
-                    </table>
-                </div>
-                 <div class="setups-controls">
-                    <button id="save-setups-2-btn" class="master-only">Save Secondary Setups</button>
-                    <p id="setups-save-status-2" class="setups-save-status"></p>
-                </div>
             </div>
             
             <div class="controls-container" id="journal-controls">
@@ -1602,8 +1600,8 @@
                 modalNextBtn: document.getElementById('modal-next'),
                 journalTab: document.getElementById('journal-tab'),
                 persistentNotesEl: document.getElementById('persistent-notes-entry'),
-                setupsTable1: document.getElementById('primary-setups-table-tracker'),
-                setupsTable2: document.getElementById('secondary-setups-table-journal'),
+                setupsTable1: document.getElementById('primary-setups-table'),
+                setupsTable2: document.getElementById('secondary-setups-table'),
                 saveSetups1Btn: document.getElementById('save-setups-1-btn'),
                 saveSetups2Btn: document.getElementById('save-setups-2-btn'),
                 setupsSaveStatus1: document.getElementById('setups-save-status-1'),
