--- a/index.html
+++ b/index.html
@@ -992,14 +992,14 @@
         }
 
         /* Part 1: Style for the double-clicked "resistance" cell */
-        .setups-table td.is-resistance-split {
-            background: linear-gradient(to right, #ffb700 50%, #ff9500 50%);
-            position: relative;
-            color: #000;
-            font-weight: bold;
-            padding-left: 50% !important; /* Force text content into the right half */
-            box-sizing: border-box;
-        }
+.setups-table td.is-resistance-split {
+    background: linear-gradient(to right, #ffb700 50%, #ff9500 50%);
+    position: relative;
+    color: #000;
+    font-weight: bold;
+    padding-left: 50% !important; /* Force text content into the right half */
+    box-sizing: border-box; /* <-- THIS IS THE FIX */
+}
 
         .setups-table td.is-resistance-split::before {
             content: "Resistance:";
